fix Total Value Deposited text overflow

--- a/src/views/Stake/stake.scss
+++ b/src/views/Stake/stake.scss
@@ -84,21 +84,6 @@
   }
 }
 
-.mobile .stake-top-metrics {
-  .stake-apy,
-  .stake-tvl,
-  .stake-index {
-    align-items: flex-start;
-  }
-}
-
-.mobile .stake-apy {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
 .ohm-logo-tiny {
   height: 14px;
   width: 14px;
